  * There is now a new "Signaling" menu in options for sound settings
  * You can now set the sound volume for online and message sounds
  * General sound format support but only wav-files (PCM) will be in the release
  * New option "Small font in chat"
  * Search results are now drawn with DrawTools (like the new chat history)
  * Many minor bugfixes

________________________________________________________________________________
VERSION 0.3.1

  * NEW FEATURE: You can now add and delete groups
  * NEW FEATURE: Users of the Nokia 6230 can now set the connection delay in the network menu
  * Bugfix: Time display on message timestamp was not correct
  * Bugfix: If you try to add a contact and there are no groups you can make a new one
  * Bugfix: There is now a 100% unique ID created for new contacts and groups
  * Bugfix: IDs created for new contacts/groups is now in the needed range
  * Bugfix: Fixed invisible mode bug. Now invisible contacts are shown correctly
  * Bugfix: Now it is possible to delete contact from contact list in Siemens build
  * "Use cp1251 hack" option is true by default in the russian build
  * Program asks user before exit if unread messages exist
  * Contact names can be changed locally till next list update from server
  * If selected the date and time on the splash screen is now located on top of the screen
  * Added Bulgarian translation
  
________________________________________________________________________________
VERSION 0.3.2

  * BUGFIX: Sending messages was not possible after renaming a contact
  * BUGFIX: Time bug (hopefully) fixed
  * ContactList title is now different depending on the length of the word "list"
  * Options subpages now have a back button so you can go back without saving
  * Added Polish translation
  
________________________________________________________________________________
VERSION 0.3.3
  * New module: Text messages history storing
  * Added Ukrainian translation
  